<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/background"
    android:padding="10dp">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.github.florent37.materialtextfield.MaterialTextField
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:mtf_labelColor="#666">

            <EditText
                android:id="@+id/edName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:hint="@string/name" />
        </com.github.florent37.materialtextfield.MaterialTextField>

        <com.github.florent37.materialtextfield.MaterialTextField
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:mtf_labelColor="#666">

            <EditText
                android:id="@+id/edVehicle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/vehicle_no" />
        </com.github.florent37.materialtextfield.MaterialTextField>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:onClick="onClickSelectTime"
                android:layout_marginTop="10dp"
                android:text="@string/select_time"
                android:textColor="@color/colorAccent"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvTime"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:text=""
                android:textColor="@color/colorPrimary"
                android:textSize="20sp" />

        </LinearLayout>

        <Button
            android:id="@+id/btnReserve"
            android:text="Reserve"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:layout_width="270dp"
            android:layout_height="60dp"
            android:background="@drawable/buttonshape"
            android:shadowColor="#3E77A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:layout_marginTop="50dp"
            android:layout_gravity="center"
            android:onClick="onClickReserve" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>