<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/home"
    android:padding="10dp">


    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="center">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="50dp"
            android:text="SWIPE DOWN TO REFRESH"
            android:textSize="16sp"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            >

            <Button
                android:id="@+id/btnslot1"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/slotshape"
                android:onClick="onClickA1"
                android:shadowColor="#A8A8A8"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="5"
                android:text="A1"
                android:textColor="#FFFFFF"
                android:textSize="25sp" />

            <Button
                android:id="@+id/btnslot2"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="15dp"
                android:background="@drawable/slotshape"
                android:onClick="onClickA2"
                android:shadowColor="#A8A8A8"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="5"
                android:text="A2"
                android:textColor="#FFFFFF"
                android:textSize="25sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp">

            <Button
                android:id="@+id/btnslot3"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/slotshape"
                android:onClick="onClickA3"
                android:shadowColor="#A8A8A8"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="5"
                android:text="A3"
                android:textColor="#FFFFFF"
                android:textSize="25sp" />

            <Button
                android:id="@+id/btnslot4"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="15dp"
                android:background="@drawable/slotshape"
                android:onClick="onClickA4"
                android:shadowColor="#A8A8A8"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="5"
                android:text="A4"
                android:textColor="#FFFFFF"
                android:textSize="25sp" />

        </LinearLayout>

        <android.support.v7.widget.CardView
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            app:cardCornerRadius="20dp"
            app:cardBackgroundColor="#FFFFFF"
            >

                <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
                    android:padding="10dp"
    >
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="Slot Status"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="#6495ED"
                />

            <TextView
                android:layout_marginTop="20dp"
                android:id="@+id/textViewS1"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/a1_available"
                android:textColor="#6495ED"
                />

            <TextView
                android:id="@+id/textViewS2"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/a2_available"
                android:textColor="#6495ED"
                />

            <TextView
                android:id="@+id/textViewS3"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/a3_available"
                android:textColor="#6495ED"
                />
            <TextView
                android:id="@+id/textViewS4"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/a4_available"
                android:textColor="#6495ED"
                />

</LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

        </ScrollView>

    </android.support.v4.widget.SwipeRefreshLayout>



</android.support.constraint.ConstraintLayout>
